<resources>
    <string name="app_name">Quiz App 3</string>
    <string name="hello_tj">Hello!</string>
    <string name="name_hint">What is your name?</string>
    <string name="click_button">Submit</string>
    <string name="color_hint">What is your favorite color?</string>
    <string name="click_button2">Change Color</string>
    <string name="color_info">Colors: aqua, black, blue, cyan, darkgray, fuchsia, gray, green, lightgray, lime, magenta, maroon, navy, olive, purple, red, silver, teal, white, yellow.</string>
    <string name="num_start">You haven\'t pressed the color button yet.</string>
    <string name="click_button3">Random Color</string>
    <string name="randomColorText">Set background to a random color!</string>
    <string name="act2">Press for Lab03</string>
    <string name="test">testing testing 123</string>
    <string name="text_1">Press me!</string>
    <string name="text_2">No, press me!</string>
    <string name="text_3">Press me please!!</string>
    <string name="text_4">ME!! PRESS ME!!!</string>
    <string name="view_1">Hi!</string>
    <string name="view_2">Hello</string>
    <string name="view_3">Hey there</string>
    <string name="act3">Layout 2</string>
    <string name="button_4">Press me!</string>
    <string name="act4">Layout 3</string>
    <string name="act5">Layout 4</string>
    <string name="act6">Layout 5</string>
    <string name="act7">Layout 6</string>
    <string name="act8">Layout 7</string>
    <string name="onpause">onPause()</string>
    <string name="oncreate">onCreate()</string>
    <string name="onstart">onStart()</string>
    <string name="onresume">onResume()</string>
    <string name="onstop">onStop()</string>
    <string name="onrestart">onRestart()</string>
    <string name="ondestroy">onDestroy()</string>
    <string name="lifetime_text">Lifetime Stats:</string>
    <string name="currentrun_text">Current Run Stats:</string>
</resources>