<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colorInfo"
        android:layout_width="358dp"
        android:layout_height="63dp"
        android:text="@string/color_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252"
        />

    <TextView
        android:id="@+id/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_tj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/numBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_start"
        app:layout_constraintBottom_toBottomOf="@+id/textBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        app:layout_constraintTop_toBottomOf="@+id/response2EditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/responseEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:gravity="center_horizontal"
        />

    <EditText
        app:layout_constraintTop_toBottomOf="@+id/textBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/response2EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_hint"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button"
        android:textColor="#318214"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/responseEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/clickButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button2"
        android:textColor="#318214"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/clickButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/clickButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button3"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickButton2" />

    <TextView
        android:id="@+id/randomColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randomColorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clickButton3"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/nextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next_activity"
        android:textAllCaps="true"
        android:textColor="#318214"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomColor" />

</androidx.constraintlayout.widget.ConstraintLayout>